--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discordjs-starter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
     "build": "tsc"
@@ -14,5 +14,8 @@
     "discord.js": "^13.6.0",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
